[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.4",
    "scikit-learn>=1.9.0",
    "ta>=0.11.0",
    "xgboost>=3.2.0",
    "yfinance>=1.5.1",
]
